<resources>
    <string name="app_name">Poschtizettel</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add_list">Add List</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_shopping_list">List!. Arg: %1$s</string>
    <string name="list">List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AddButtonText">Add</string>
    <string name="sync_fragment_label">syncfragment</string>
    <string name="apply">Apply</string>
    <string name="merge">Merge</string>
    <string name="set_to_remote">Set to remote</string>
    <string name="set_to_local">Set to local</string>


</resources>
