<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.poschtizettel.ShoppingListsFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_singleListFragment"
            app:destination="@id/singleListFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SyncFragment"
            app:destination="@id/SyncFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.poschtizettel.AddShoppingListFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/singleListFragment"
        android:name="com.example.poschtizettel.SingleListFragment"
        android:label="fragment_single_list"
        tools:layout="@layout/fragment_single_list" >
        <action
            android:id="@+id/action_singleListFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/singleListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="listkey"
            app:argType="string"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_singleListFragment_to_addItemFragment"
            app:destination="@id/addItemFragment"
            app:popUpTo="@id/singleListFragment" />
    </fragment>
    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.example.poschtizettel.AddItemFragment"
        android:label="fragment_add_item"
        tools:layout="@layout/fragment_add_item" >
        <action
            android:id="@+id/action_addItemFragment_to_singleListFragment"
            app:destination="@id/singleListFragment"
            app:popUpTo="@id/singleListFragment"
            app:popUpToInclusive="true" />
        <argument android:name="listkey"
            app:argType="string"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/SyncFragment"
        android:name="com.example.poschtizettel.SyncFragment"
        android:label="@string/sync_fragment_label"
        tools:layout="@layout/fragment_sync">
    </fragment>

</navigation>
